# CorkBoolean

./: .gitignore  CMakeLists.txt  README.md
tests/: cork_test.cpp
